Fix misaligned ticket icons in table rows

--- a/indico/htdocs/sass/modules/abstracts/_roles.scss
+++ b/indico/htdocs/sass/modules/abstracts/_roles.scss
@@ -138,6 +138,8 @@
 
     #event-participants-list {
         .registration-column {
+            padding-top: 0.9em;
+
             .icon-ticket {
                 color: $pastel-gray;
 
